--- a/ssn/articles/history.txt
+++ b/ssn/articles/history.txt
@@ -1,4 +1,5 @@
 
+2/7 6k pages indexed (down?!) failed adsense review
 2/6 8k pages indexed by google
 2/5 6k pages indexed by google
 2/4 2.5k pages indexed by google
