--- a/ssn/articles/history.txt
+++ b/ssn/articles/history.txt
@@ -1,4 +1,9 @@
 
+Luna
+
+2/8 8.31k pages indexed
+2/8 8.03k pages indexed
+2/8 7.47k pages indexed
 2/7 6k pages indexed (down?!) failed adsense review
 2/6 8k pages indexed by google
 2/5 6k pages indexed by google
