--- a/ssn/articles/history.txt
+++ b/ssn/articles/history.txt
@@ -1,6 +1,9 @@
 
-Luna
-
+2/12 10.9k pages indexed
+2/11 11.1k pages indexed
+2/10 13.5k pages indexed
+2/10 adsense reject Valuable inventory:No content, Not enough content
+2/9 10.7k pages indexed
 2/8 8.31k pages indexed
 2/8 8.03k pages indexed
 2/8 7.47k pages indexed
