--- a/ssn/articles/history.txt
+++ b/ssn/articles/history.txt
@@ -1,4 +1,8 @@
 
+2/15 11.1k pages indexed
+2/14 11k pages indexed
+2/13 11.4k pages indexed
+2/12 ☯ 450M SSN Issued
 2/12 10.9k pages indexed
 2/11 11.1k pages indexed
 2/10 13.5k pages indexed
