--- a/ssn/articles/history.txt
+++ b/ssn/articles/history.txt
@@ -1,4 +1,6 @@
 
+2/17 15.7k pages indexed - adsense denied 9am
+2/16 16.4k pages indexed applied adsense 7pm
 2/16 17.1k pages indexed
 2/15 11.1k pages indexed
 2/14 11k pages indexed
@@ -18,3 +20,17 @@
 2/4 2.5k pages indexed by google
 2/3 upload 90k ssn base files
 1/8/2019 domain purchased
+
+
+
+robots: from doubleclick.net
+User-Agent: *
+Allow: /ads/preferences/
+Allow: /gpt/
+Allow: /pagead/show_ads.js
+Allow: /pagead/js/adsbygoogle.js
+Allow: /pagead/js/*/show_ads_impl.js
+Allow: /static/glade.js
+Allow: /static/glade/
+Disallow: /
+Noindex: /
