--- a/ssn/articles/history.txt
+++ b/ssn/articles/history.txt
@@ -1,3 +1,5 @@
+2/24 ☯ SSN number format
+2/24 - adsense denied
 2/24 10.5k reported, =298 actual= in search!
 2/23 ☯ SSN-issued-by-state.html
 2/23 adsense denied
