--- a/ssn/articles/history.txt
+++ b/ssn/articles/history.txt
@@ -1,5 +1,8 @@
+2/26 cleaned another 246 pages from google search (toremove2/3.txt)
+2/25 cleaned 276  google search (toremove.txt)
 2/24 ☯ SSN number format
 2/24 - adsense denied
+2/24 - cleaned first 1,000 pages of 90k list. limited to 1k/day
 2/24 10.5k reported, =298 actual= in search!
 2/23 ☯ SSN-issued-by-state.html
 2/23 adsense denied
