--- a/ssn/articles/history.txt
+++ b/ssn/articles/history.txt
@@ -1,3 +1,6 @@
+
+3/1  siteindex.txt added
+3/1  toremove10.txt
 2/28 toremove9.txt
 2/27 (toremove8.txt) 9 ready to run 
 2/27 cleaned 58 pages from google search (toremove7.txt)
