--- a/ssn/articles/history.txt
+++ b/ssn/articles/history.txt
@@ -1,3 +1,12 @@
+timestamps: ([01]?[0-9]|2[0-3]):[0-5][0-9](:[0-5][0-9]),([0-9]*)( --> )?
+([0-9]?[0-9]?[0-9]\n)
+^\n
+
+3/25 adsense approved $0.31
+3/24 toremove33-34-35 from last 7 day history from site visit (removed 15,397 of 14,616)
+3/24 toremove32 (15,215)
+3/24 toremove31 (14,945)
+3/24 toremove30 (search console remove  14,720 total to date of 14,616)
 3/20 toremove28 and 29.txt (search console remove  14,130 total to date of 17,163)
 3/14 in search concsole, sitemap vlidation errors, hit 'validate' on all errors
 3/14 toremove26-27 by looking at page views compared to remove (search console remove 13,244 total to date)
