--- a/ssn/articles/history.txt
+++ b/ssn/articles/history.txt
@@ -1,3 +1,5 @@
+6/8 replace adsense src="//pagead2 with src="https://pagead2 on state pages
+6/5 try to add alt adsense account
 6/3   added ads.txt
 6/2 cleared adsense blocking controls ~400
 05/27 create secondary adsense filter (200 units used) for numchk
